# AnTrain

./: local.properties  settings.gradle
CabinetSeeta/: .gitignore  README.md  build.gradle
CabinetSeeta/src/main/: AndroidManifest.xml
CabinetSeeta/src/main/java/com/seetaface/v6/: AgePredictor.java  EyeStateDetector.java  FaceAntiSpoofing.java  FaceDetector.java  FaceEngine.java  FaceImagePreprocessor.java  FaceLandMarker.java  FaceRecognizer.java  FaceTracker.java  GenderPredictor.java  MaskDetector.java  SeetaUtils.java  TrackingInfo.java
CabinetSeeta/src/main/java/com/seetaface/v6/config/: EnumCamera.java  FaceConfig.java
CabinetSeeta/src/main/java/com/seetaface/v6/constant/: SeetafaceConst.java  SeetafaceModelConst.java
CabinetSeeta/src/main/java/com/seetaface/v6/enums/: EnumEyeState.java  EnumFaceAntiStatus.java  EnumFaceAntiType.java  EnumGender.java  EnumImgType.java
CabinetSeeta/src/main/jni_v6/: CMakeLists.txt  ObjectMapping.cpp  ObjectMapping.h  README.md  com_seetaface_v6_AgePredictor.h  com_seetaface_v6_EyeStateDetector.h  com_seetaface_v6_FaceAntiSpoofing.h  com_seetaface_v6_FaceDetector.h  com_seetaface_v6_FaceImagePreprocessor.h  com_seetaface_v6_FaceLandMarker.h  com_seetaface_v6_FaceRecognizer.h  com_seetaface_v6_FaceTracker.h  com_seetaface_v6_GenderPredictor.h  com_seetaface_v6_MaskDetector.h  com_seetaface_v6_QualityChecker.h  nativeAgePredictor.cpp  nativeEyeStateDetector.cpp  nativeFaceAntiSpoofing.cpp  nativeFaceDetector.cpp  nativeFaceLandMarker.cpp  nativeFacePreprocessor.cpp  nativeFaceRecognizer.cpp  nativeFaceTracker.cpp  nativeGenderPredictor.cpp  nativeMaskDetector.cpp  nativeQualityChecker.cpp
app/: .gitignore  build.gradle  testrecycling.jks
app/src/main/: AndroidManifest.xml
app/src/main/java/com/testrecycling/toolsapp/: FaceApplication.kt  HomeActivity.kt  StartUiActivity.kt
app/src/main/java/com/testrecycling/toolsapp/adapter/: ItemReportingBoxAdapter.kt  ItemReportingBoxClickListener.kt  ItemSpacingDecoration.kt
app/src/main/java/com/testrecycling/toolsapp/dao/: ConfigFlowDao.kt  FileFlowDao.kt  LatticeFlowDao.kt  LogFlowDao.kt  ResFlowDao.kt  StateFlowDao.kt  TransFlowDao.kt  WeightFlowDao.kt
app/src/main/java/com/testrecycling/toolsapp/db/: DatabaseManager.kt  SQLDatabase.kt
app/src/main/java/com/testrecycling/toolsapp/dialog/: BaseBindDialogFragment.kt  BaseDialogFragment.kt  DialogExts.kt  LoadingDialog.kt  LoadingNativeDialog.kt  SimpleCalendarDialogFragment.kt
app/src/main/java/com/testrecycling/toolsapp/fitsystembar/: FitSystemBarHelper.kt  SystemBarExtensions.kt
app/src/main/java/com/testrecycling/toolsapp/fitsystembar/base/: BaseActivity.kt  BaseLazyLoadFragment.kt  FitSystemBarConstraintLayout.kt  FitSystemBarFrameLayout.kt  FitSystemBarLinearLayout.kt
app/src/main/java/com/testrecycling/toolsapp/fitsystembar/base/bind/: BaseBindActivity.kt  BaseBindFragment.kt
app/src/main/java/com/testrecycling/toolsapp/fitsystembar/custom/: FitNavigationBarFrameLayout.kt  FitNavigationBarLinearLayout.kt  FitStatusBarConstraintLayout.kt  FitStatusBarFrameLayout.kt
app/src/main/java/com/testrecycling/toolsapp/http/: DailyDelDateWorker.kt  DailyDelWorker.kt  DailyLightsWorker.kt  DailyRestartWorker.kt  FileCleaner.kt  GdList3Dto.kt  HttpUrl.kt  MailConfig.kt  MailSender.kt  MailWorker.kt  TaskDelDateScheduler.kt  TaskDelScheduler.kt  TaskLightsScheduler.kt  TaskRestartScheduler.kt  UserDto.kt  VersionDto.kt
app/src/main/java/com/testrecycling/toolsapp/model/: ConfigEntity.kt  FileEntity.kt  LatticeEntity.kt  LogEntity.kt  ResEntity.kt  StateEntity.kt  TransEntity.kt  UserEntity.kt  WeightEntity.kt
app/src/main/java/com/testrecycling/toolsapp/socket/: ConfigBean.kt  ConfigInfo.kt  ConfigLattice.kt  ConfigRes.kt  DoorCloseBean.kt  DoorCloseInfo.kt  DoorOpenBean.kt  FactoryBean.kt  FaultBean.kt  FaultInfo.kt  GpsInfo.kt  HeartBeatBean.kt  HeartStateInfo.kt  InitFactoryBean.kt  OtaBean.kt  PhotoBean.kt  RestartBean.kt  SocketClient.kt  SocketUtil.kt
app/src/main/java/com/testrecycling/toolsapp/ui/: MainFragment.kt  TestFaceFragment.kt
app/src/main/java/com/testrecycling/toolsapp/utils/: AdvancedDeviceInfoReflector.kt  AppUtils.kt  ByteUtils.java  CRC16.java  CRC32MPEG2Util.kt  CalculationUtil.kt  CmdData.java  CmdType.kt  CmdValue.kt  CommandParser.kt  Config.kt  Constants.kt  CrashHandlerManager.kt  DatabaseExportHelper.kt  DeviceInfoHelper.kt  DeviceInfoHelper2.kt  DynamicJsonBuilder.kt  EntityType.kt  EnumFaultState.kt  EnumSignal.kt  FFmpegCompressor.kt  FaceEngineHelper.kt  FaultType.kt  FileMdUtil.kt  FilePrefixSearcher.kt  FormatUtil.java  FragmentCoordinator.kt  FragmentNavigator.kt  GridSpacingItemDecoration.kt  HexConverter.kt  IccidOper.java  JsonBuilder.kt  Loge.kt  MediaPlayerHelper.kt  MediaPlayerQueueHelper.kt  NetworkStateMonitor.kt  OSUtils.kt  OpenStatus.kt  OpenType.kt  PermissionRequest.kt  (+26 more)
app/src/main/java/com/testrecycling/toolsapp/view/: CircleProgressView.kt  FaceScanView.kt  SmoothProgressView.kt
app/src/main/java/com/testrecycling/toolsapp/vm/: CabinetVM.kt  ClearTimer.kt  CountdownTimer.kt  DeliveryTimer.kt
app/src/main/java/nearby/lib/signal/livebus/: BusType.kt
app/src/main/kotlin/: LicenseGenerator.kt  Main.kt
app/src/main/res/drawable/: corner_shadow_layer_list.xml
app/src/main/res/layout/: activity_home.xml  activity_init_fractory.xml  base_toolbar_title.xml  dialog_permission.xml  fragment_clear_door.xml  fragment_debug_type.xml  fragment_debug_type_self.xml  fragment_delivery.xml  fragment_main.xml  fragment_reporting_box.xml  fragment_test_face.xml  fragment_tou_double.xml
gradle/wrapper/: gradle-wrapper.properties
